--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>crudapp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>crudapp</name>
+    <name>springboot_crud_rest_webapp</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
